Brought back the summary system for the index, this time with more awesomeness! It truncates to the first </p> tag, so that no sentences ever get cut off. It then runs it through a little filter I wrote that uses Hpricot to fix any HTML weirdness that might be caused by the truncating process. That makes sure the page still validates.

--- a/stylesheets/post.css
+++ b/stylesheets/post.css
@@ -11,10 +11,13 @@
 	font-size: 12pt;
 	font-family: 'Georgia', Georgia, Times, serif;
 }
-.more {
-	margin: 10px 30px 0px 0px;
+.continue-reading {
+	margin: 0px 25px 0px 0px;
+	padding: 0px;
+	line-height: 1.0em;
+	font-size: 16px;
 	font-style: italic;
 	text-align: right;
 }
-.more a { text-decoration: none; }
-.more a:hover { text-decoration: underline }
+.continue-reading a { text-decoration: none; }
+.continue-reading a:hover { text-decoration: underline }
